fix map z-index

--- a/src/pages/_app/sass/globals.sass
+++ b/src/pages/_app/sass/globals.sass
@@ -12,3 +12,7 @@ body
 .leaflet-container
     width: 100%
     height: 100%
+.leaflet-pane
+    z-index: 0
+.leaflet-top,.leaflet-control
+    z-index: 0
